--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 </head>
 
 <body>
-    <div class="topbar w-100 bg-danger d-flex justify-content-around align-items-center">
+    <div class="topbar w-100 bg-danger d-flex justify-content-around align-items-center ">
         <div class="hospital-contact  text-white">
-            <i class="lni lni-star-filled"></i>
-            <i class="lni lni-star-filled"></i>
-            <i class="lni lni-star-filled"></i>
-            <i class="lni lni-star-filled"></i>
-            
+           <i class="bi bi-telephone"></i>
+           <span class="me-2">0469-2782262</span>      
+           <i class="bi bi-envelope"></i>
+           <span> gmmhospital@gmail.com</span>      
         </div>
-        <div class="hospital-social">
+        <div class="hospital-social d-none d-md-block">
             <i class="lni lni-star-filled"></i>
             <i class="lni lni-star-filled"></i>
             <i class="lni lni-star-filled"></i>
@@ -38,7 +37,7 @@
             
             <div class="container">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-lg-6 col-md-6 col-12">
+                    <div class="col-lg-5 col-12">
                         <!-- Start Header Logo -->
                         <a href="index.html" class="navbar-logo d-flex align-items-center">
                             <img src="./assets/images/logo.jpg" alt="">
@@ -52,7 +51,7 @@
                         <!-- End Header Logo -->
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-12 row align-items-center">
+                    <div class="col-lg-7 col-12 row align-items-center">
                         <div class="nav-inner">
 
                             <!-- Start Navbar -->
